# Tope-s-Portfolio

./: .env.example  .gitignore  .prettierrc.json  BIBLE_V1_FEATURE_AUDIT.md  BUILD_LOG.md  BUILD_LOG_CLUB_SEASON_AUDIT.txt  BUILD_LOG_LIGHTHOUSE.json  BUILD_LOG_TOP100.txt  DEPLOY.md  DRAFTBALLER_GAME_MODES.md  DRAFTBALLER_MASTER_PLAN.md  KNOWN_SIMPLIFICATIONS.md  LICENSE  NETLIFY_DEPLOY.md  README.md  ROADMAP.md  RUN_AND_DEPLOY.md  UNIFIED_PLAY_DEPLOY.md  astro.config.mjs  netlify.toml  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
projects/: README.md
projects/alo/: .gitignore  README.md  pyproject.toml
projects/alo/alo/: __init__.py  cache.py  cli.py  observability.py  pipeline.py  providers.py  quality.py  types.py
projects/alo/tests/: test_pipeline.py  test_providers.py  test_quality.py
projects/sabi/: README.md  pyproject.toml
projects/sabi/sabi/: __init__.py  agent.py  cli.py  evals.py  guardrails.py  observability.py  planner.py  store.py  tools.py  types.py
projects/sabi/tests/: test_agent.py  test_evals.py  test_guardrails.py  test_tools.py
public/: forms.html
scripts/: audit-club-seasons.mjs  audit-top100-ovr.mjs  benchmark-pool.mjs  build-embedded-games.mjs  download-archive-url.mjs  download-sports-db-bundle.mjs  ensure-sports-db-data.mjs  extract-archive-zip.py  extract-portrait.mjs  netlify-prebuild.mjs  package-archive-zip.mjs  package-sports-db.mjs  seed-external-data.mjs  split-sports-db-for-deploy.mjs  sports-db-gzip-chunks.mjs  stage-sports-db-cdn.mjs  stage-sportverse-data-to-dist.mjs  test-projects.mjs  verify-sports-db-artifacts.mjs
sportverse/: .gitignore  README.md  netlify.toml  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
(+270 files in other folders)
