[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sabi"
version = "0.1.0"
description = "An agentic AI assistant for African SMEs: planner -> tools -> critic -> answer, with guardrails, observability and an eval harness."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Temitope Olaitan" }]
dependencies = []  # core runs on the standard library alone

[project.optional-dependencies]
# Swap the rule-based planner for a real model by installing one of these and
# wiring an LLMPlanner. The core system stays unchanged.
llm = ["openai>=1.0", "anthropic>=0.30"]
dev = ["pytest>=8"]

[project.scripts]
sabi = "sabi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sabi"]
